src/styles/base.css
@tailwind base;

@layer base {
  body {
    @apply antialiased text-gray-900 bg-light dark:bg-dark dark:text-gray-100;
    font-variant: common-ligatures contextual;
    text-rendering: optimizeLegibility;
    letter-spacing: -0.01em;
    font-feature-settings: 'cv01', 'cv10', 'ss01', 'kern' , 'liga' , 'rlig' , 'dlig' , 'calt', 'clig', 'ccmp', 'cpsp';
  }
}

